// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`simulateStreamingMiddleware > should handle empty text response 1`] = `
[
  {
    "messageId": "msg-6",
    "request": {},
    "type": "step-start",
    "warnings": [],
  },
  {
    "finishReason": "stop",
    "messageId": "msg-6",
    "providerMetadata": undefined,
    "request": {},
    "response": {
      "headers": undefined,
      "id": "id-13",
      "modelId": "mock-model-id",
      "timestamp": 2025-01-01T00:00:00.000Z,
    },
    "type": "step-finish",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokens": 5,
      "outputTokens": 10,
      "reasoningTokens": 3,
      "totalTokens": 18,
    },
    "warnings": [],
  },
  {
    "finishReason": "stop",
    "providerMetadata": undefined,
    "response": {
      "headers": undefined,
      "id": "id-13",
      "modelId": "mock-model-id",
      "timestamp": 2025-01-01T00:00:00.000Z,
    },
    "type": "finish",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokens": 5,
      "outputTokens": 10,
      "reasoningTokens": 3,
      "totalTokens": 18,
    },
  },
]
`;

exports[`simulateStreamingMiddleware > should pass through warnings from the model 1`] = `
[
  {
    "code": "test_warning",
    "message": "Test warning",
    "type": "other",
  },
]
`;

exports[`simulateStreamingMiddleware > should preserve additional metadata in the response 1`] = `
[
  {
    "messageId": "msg-5",
    "request": {},
    "type": "step-start",
    "warnings": [],
  },
  {
    "text": "This is a test response",
    "type": "text",
  },
  {
    "finishReason": "stop",
    "messageId": "msg-5",
    "providerMetadata": {
      "custom": {
        "key": "value",
      },
    },
    "request": {},
    "response": {
      "headers": undefined,
      "id": "id-11",
      "modelId": "mock-model-id",
      "timestamp": 2025-01-01T00:00:00.000Z,
    },
    "type": "step-finish",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokens": 5,
      "outputTokens": 10,
      "reasoningTokens": 3,
      "totalTokens": 18,
    },
    "warnings": [],
  },
  {
    "finishReason": "stop",
    "providerMetadata": {
      "custom": {
        "key": "value",
      },
    },
    "response": {
      "headers": undefined,
      "id": "id-11",
      "modelId": "mock-model-id",
      "timestamp": 2025-01-01T00:00:00.000Z,
    },
    "type": "finish",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokens": 5,
      "outputTokens": 10,
      "reasoningTokens": 3,
      "totalTokens": 18,
    },
  },
]
`;

exports[`simulateStreamingMiddleware > should simulate streaming with reasoning as array of text objects 1`] = `
[
  {
    "messageId": "msg-2",
    "request": {},
    "type": "step-start",
    "warnings": [],
  },
  {
    "text": "This is a test response",
    "type": "text",
  },
  {
    "text": "First reasoning step",
    "type": "reasoning",
  },
  {
    "text": "Second reasoning step",
    "type": "reasoning",
  },
  {
    "providerMetadata": {
      "testProvider": {
        "signature": "abc",
      },
    },
    "text": "",
    "type": "reasoning",
  },
  {
    "finishReason": "stop",
    "messageId": "msg-2",
    "providerMetadata": undefined,
    "request": {},
    "response": {
      "headers": undefined,
      "id": "id-5",
      "modelId": "mock-model-id",
      "timestamp": 2025-01-01T00:00:00.000Z,
    },
    "type": "step-finish",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokens": 5,
      "outputTokens": 10,
      "reasoningTokens": 3,
      "totalTokens": 18,
    },
    "warnings": [],
  },
  {
    "finishReason": "stop",
    "providerMetadata": undefined,
    "response": {
      "headers": undefined,
      "id": "id-5",
      "modelId": "mock-model-id",
      "timestamp": 2025-01-01T00:00:00.000Z,
    },
    "type": "finish",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokens": 5,
      "outputTokens": 10,
      "reasoningTokens": 3,
      "totalTokens": 18,
    },
  },
]
`;

exports[`simulateStreamingMiddleware > should simulate streaming with reasoning as string 1`] = `
[
  {
    "messageId": "msg-1",
    "request": {},
    "type": "step-start",
    "warnings": [],
  },
  {
    "reasoningType": "text",
    "text": "This is the reasoning process",
    "type": "reasoning",
  },
  {
    "text": "This is a test response",
    "type": "text",
  },
  {
    "finishReason": "stop",
    "messageId": "msg-1",
    "providerMetadata": undefined,
    "request": {},
    "response": {
      "headers": undefined,
      "id": "id-3",
      "modelId": "mock-model-id",
      "timestamp": 2025-01-01T00:00:00.000Z,
    },
    "type": "step-finish",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokens": 5,
      "outputTokens": 10,
      "reasoningTokens": 3,
      "totalTokens": 18,
    },
    "warnings": [],
  },
  {
    "finishReason": "stop",
    "providerMetadata": undefined,
    "response": {
      "headers": undefined,
      "id": "id-3",
      "modelId": "mock-model-id",
      "timestamp": 2025-01-01T00:00:00.000Z,
    },
    "type": "finish",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokens": 5,
      "outputTokens": 10,
      "reasoningTokens": 3,
      "totalTokens": 18,
    },
  },
]
`;

exports[`simulateStreamingMiddleware > should simulate streaming with text response 1`] = `
[
  {
    "messageId": "msg-0",
    "request": {},
    "type": "step-start",
    "warnings": [],
  },
  {
    "text": "This is a test response",
    "type": "text",
  },
  {
    "finishReason": "stop",
    "messageId": "msg-0",
    "providerMetadata": undefined,
    "request": {},
    "response": {
      "headers": undefined,
      "id": "id-1",
      "modelId": "mock-model-id",
      "timestamp": 2025-01-01T00:00:00.000Z,
    },
    "type": "step-finish",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokens": 5,
      "outputTokens": 10,
      "reasoningTokens": 3,
      "totalTokens": 18,
    },
    "warnings": [],
  },
  {
    "finishReason": "stop",
    "providerMetadata": undefined,
    "response": {
      "headers": undefined,
      "id": "id-1",
      "modelId": "mock-model-id",
      "timestamp": 2025-01-01T00:00:00.000Z,
    },
    "type": "finish",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokens": 5,
      "outputTokens": 10,
      "reasoningTokens": 3,
      "totalTokens": 18,
    },
  },
]
`;

exports[`simulateStreamingMiddleware > should simulate streaming with tool calls 1`] = `
[
  {
    "messageId": "msg-4",
    "request": {},
    "type": "step-start",
    "warnings": [],
  },
  {
    "text": "This is a test response",
    "type": "text",
  },
  {
    "error": [AI_NoSuchToolError: Model tried to call unavailable tool 'calculator'. No tools are available.],
    "type": "error",
  },
  {
    "error": [AI_NoSuchToolError: Model tried to call unavailable tool 'weather'. No tools are available.],
    "type": "error",
  },
  {
    "finishReason": "tool-calls",
    "messageId": "msg-4",
    "providerMetadata": undefined,
    "request": {},
    "response": {
      "headers": undefined,
      "id": "id-9",
      "modelId": "mock-model-id",
      "timestamp": 2025-01-01T00:00:00.000Z,
    },
    "type": "step-finish",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokens": 5,
      "outputTokens": 10,
      "reasoningTokens": 3,
      "totalTokens": 18,
    },
    "warnings": [],
  },
  {
    "finishReason": "tool-calls",
    "providerMetadata": undefined,
    "response": {
      "headers": undefined,
      "id": "id-9",
      "modelId": "mock-model-id",
      "timestamp": 2025-01-01T00:00:00.000Z,
    },
    "type": "finish",
    "usage": {
      "cachedInputTokens": undefined,
      "inputTokens": 5,
      "outputTokens": 10,
      "reasoningTokens": 3,
      "totalTokens": 18,
    },
  },
]
`;
